<resources>
    <string name="app_name" translatable="false">Peregrine</string>
    <string name="et_rest_url" translatable="false">https://etws.etrade.com/%1$s/rest/%2$s</string>
    <string name="paste_verifier">Paste Verifier</string>
    <string name="unassigned">Unassigned</string>
    <string name="activity_title">My Accounts</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="processing">processing</string>
    <string name="no_data">No data</string>
    <string name="holdings">Holdings</string>
    <string name="add_holding">Add Holding</string>
    <string name="save">Save</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="new_holding">New Holding</string>
    <string name="enter_details">Enter details</string>
    <string-array name="price_symbols">
        <item>TSLA $300.00</item>
    </string-array>
</resources>
