<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.rubyhuntersky.peregrine.interactions.holdings.HoldingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/holdings"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/loadingTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/loading"
            android:textAppearance="@style/FillerTextAppearance"/>

        <FrameLayout
            android:id="@+id/addHoldingFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addHoldingButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:text="@string/add_holding"/>
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/holdingsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/plusFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>
